recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:5: error: not found: value lenght
    spiral(steps-1,angle,lenght,increment+1);
                         ^