recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(increment<length){
    forward(steps);
    left(angle);
    spiral(steps-1,angle,lenght,increment+1);
  }
}